--- a/app/views/universities/index.html.erb
+++ b/app/views/universities/index.html.erb
@@ -1,4 +1,17 @@
-<p id="notice"><%= notice %></p>
+<%= search_form_for @q do |f| %>
+
+
+<div class="row">
+  <div class="col-md-6">
+    <%= f.search_field :name_cont, placeholder: "Search you University and spread the word"  %>
+  </div>
+</div>
+
+<%= f.submit "Buscar", class: "button button_red" %>
+<% end %>
+
+<div id="map"></div>
+
 
 <h1>Listing Universities</h1>
 
@@ -22,26 +35,127 @@
 
   <tbody>
     <% @universities.each do |university| %>
-      <tr>
-        <td><%= university.user %></td>
-        <td><%= university.url %></td>
-        <td><%= university.name %></td>
-        <td><%= university.description %></td>
-        <td><%= university.image %></td>
-        <td><%= university.address %></td>
-        <td><%= university.latitude %></td>
-        <td><%= university.longitude %></td>
-        <td><%= university.facebook %></td>
-        <td><%= university.twitter %></td>
-        <td><%= university.linkedin %></td>
-        <td><%= link_to 'Show', university %></td>
-        <td><%= link_to 'Edit', edit_university_path(university) %></td>
-        <td><%= link_to 'Destroy', university, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+    <tr>
+      <td><%= university.user %></td>
+      <td><%= university.url %></td>
+      <td><%= university.name %></td>
+      <td><%= university.description %></td>
+      <td><%= university.image %></td>
+      <td><%= university.address %></td>
+      <td><%= university.latitude %></td>
+      <td><%= university.longitude %></td>
+      <td><%= university.facebook %></td>
+      <td><%= university.twitter %></td>
+      <td><%= university.linkedin %></td>
+      <td><%= link_to 'Show', university %></td>
+      <td><%= link_to 'Edit', edit_university_path(university) %></td>
+      <td><%= link_to 'Destroy', university, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    </tr>
     <% end %>
   </tbody>
 </table>
 
 <br>
 
+<div class="row">
+<div class="center">
+<% unless @universities.blank? %>
+  <%= will_paginate @universities %>
+<% end %>
+</div>
+</div>
+
+
+
 <%= link_to 'New University', new_university_path %>
+
+
+
+
+
+
+
+
+
+
+
+<script>
+
+function initMap() {
+
+    // Creating a new map
+    var map = new google.maps.Map(document.getElementById("map"), {
+          <% if @arrUnis.length > 0 %>
+              center: new google.maps.LatLng(<%= @arrUnis[0].latitude %>, <%= @arrUnis[0].longitude %>),
+              zoom: 7,
+            <% else %>  
+              center: new google.maps.LatLng(44.5403, -78.5463),
+              zoom: 3,
+            <% end %> 
+          scrollwheel: false,
+          mapTypeId: google.maps.MapTypeId.ROADMAP
+        });
+
+
+    // Creating the JSON data
+    var json = [
+        
+        <% @universities.each do |university| %>
+        {
+            "title": "<%= university.name %>",
+            "lat": <%= university.latitude %>,
+            "lng": <%= university.longitude%>,
+            "description": '<div id="content">'+
+            '<div id="siteNotice">'+
+            '</div>'+
+            '<h3 id="firstHeading" class="firstHeading upper"><%=university.name %></h3>'+
+            '<div id="bodyContent">'+
+            '<p><%=university.country_code %></p>'+
+            '<%= link_to 'More', university_path(university), class: "button button_blue" %> '+
+            '</div>'+
+            '</div>'
+        },
+        <% end %>
+        
+        
+    ]
+
+    // Creating a global infoWindow object that will be reused by all markers
+    var infoWindow = new google.maps.InfoWindow({
+      maxWidth: 200
+    });
+
+    // Looping through the JSON data
+    for (var i = 0, length = json.length; i < length; i++) {
+      var data = json[i],
+        latLng = new google.maps.LatLng(data.lat, data.lng);
+
+      // Creating a marker and putting it on the map
+      var marker = new google.maps.Marker({
+        position: latLng,
+        map: map,
+        title: data.title
+      });
+
+      // Creating a closure to retain the correct data, notice how I pass the current data in the loop into the closure (marker, data)
+      (function(marker, data) {
+
+        // Attaching a click event to the current marker
+        google.maps.event.addListener(marker, "click", function(e) {
+          infoWindow.setContent(data.description);
+          infoWindow.open(map, marker);
+        });
+
+
+      })(marker, data);
+
+}
+
+
+
+}
+    
+</script>
+
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCCXph4Sx9MklyoSlZ4JH-FCryYgRRgWi4&callback=initMap"
+        async defer></script>
