--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -31,8 +31,8 @@ font-family:"Gotham_bold";
 $light_grey: #F9F9FA;
 $grey: #f2f2f2;
 $dark_grey: #3c3c3c;
-$red: #11AFD3;
-$blue: #f95496;
+$red: #FD6C6A;
+$blue: #5B69E5;
 
 body {
 -webkit-font-smoothing: antialiased;
@@ -200,4 +200,16 @@ input[type="date"],input[type="name"], input[type="email"], input[type="textbox"
 
 .pagination .disabled {
     color: #C0C0C0;
+}
+
+#map {
+width: 100%;
+height: 200px;
+margin-bottom: 20px;
+}
+
+#map2 {
+width: 100%;
+height: 200px;
+margin-bottom: 20px;
 }
