--- a/app/views/universities/_form.html.erb
+++ b/app/views/universities/_form.html.erb
@@ -12,18 +12,18 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :country_code %><br>
-    <%= f.text_field :country_code %>
+    <%= f.label :country %><br>
+    <%= f.text_field :country_code, required: true %>
   </div>
   <div class="field">
     <%= f.label :url %><br>
-    <%= f.text_field :url %>
+    <%= f.url_field :url, required: true %>
   </div>
   <div class="field">
-    <%= f.label :name %><br>
-    <%= f.text_field :name %>
+    <%= f.label :university_name %><br>
+    <%= f.text_field :name, required: true %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit class: "button button_red" %>
   </div>
 <% end %>
