--- a/app/views/universities/new.html.erb
+++ b/app/views/universities/new.html.erb
@@ -1,5 +1,14 @@
+<br><br>
+<div class="container">
+<div class="col-md-8 col-md-offset-2">
+  <div id="formario">
+
 <h1>New University</h1>
 
 <%= render 'form' %>
 
 <%= link_to 'Back', universities_path %>
+
+</div>
+</div>
+</div>
