--- a/app/views/universities/show.html.erb
+++ b/app/views/universities/show.html.erb
@@ -47,15 +47,7 @@
   <div class="row">
   <div class="col-md-6">
     <div id="magic">
-      
-    </div>
-  </div>
-
-  <div class="col-md-6">
-    <div id="magic">
-      <h4><%= @experiences3 %> contributions</h4>
-    </div>
-  </div>
+      <%= render 'score' %>
   </div>
 
     <div id="magic">
