--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -519,6 +519,7 @@ margin-bottom: 20px;
   background-attachment: fixed;
   background-blend-mode: multiply;
   background-color: #989898;
+  margin-top: 60px;
 }
 
 .cover_home {
