--- a/app/views/universities/_score.html.erb
+++ b/app/views/universities/_score.html.erb
@@ -77,6 +77,6 @@
 
   <div class="col-md-6">
     <div id="magic">
-      <h4><%= @experiences3 %> contributions</h4>
+      <h4><%= @experiences3 %> reasons</h4>
     </div>
   </div>
