--- a/app/views/universities/index.html.erb
+++ b/app/views/universities/index.html.erb
@@ -1,7 +1,7 @@
 <div id= "banner" class="cover_home">
   <div id="hero-text">
-    <h1 style="font-size:50px">Share your <strong>University</strong> <br> Experiences</h1>
-    <h4>Look for your university..Share your experiences..Spread the word</h4>
+    <h1 style="font-size:50px">3 <strong>reasons</strong> why <br> your university Rocks <strong>|m|,</strong></h1>
+    <h4>Look for your university..and share it with the world</h4>
 
     <%= search_form_for @q do |f| %>
 
@@ -17,7 +17,7 @@
 
   </div>
 </div>
-<p>Photo by rawpixel.com on Unsplash</p>
+<p>Photo by lifesimply.rocks on Unsplash</p>
 
 
 
@@ -67,7 +67,7 @@
     <h1><%= @universityy.count %> Universities</h1>
   </div>
   <div class="col-sm-6">
-    <h1><%= @experiences2.count %> Contributions</h1>
+    <h1><%= @experiences2.count %> Reasons</h1>
   </div>
 </div>
 
