--- a/app/views/universities/index.html.erb
+++ b/app/views/universities/index.html.erb
@@ -113,7 +113,7 @@ function initMap() {
             '<h3 id="firstHeading" class="firstHeading upper"><%=university.name %></h3>'+
             '<div id="bodyContent">'+
             '<p><%=university.country_code %></p>'+
-            '<%= link_to 'More', university_path(university), class: "button button_blue" %> '+
+            '<%= link_to 'More', university_path(university), class: "button button_red" %> '+
             '</div>'+
             '</div>'
         },
