--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -535,6 +535,7 @@ margin-bottom: 20px;
   transform: translate(-50%, -50%);
   h1 {
     color: white;
+    font-size: 35px !important;
   }
   h4 {
     color: white;
