--- a/app/views/universities/index.html.erb
+++ b/app/views/universities/index.html.erb
@@ -8,7 +8,7 @@
 
     <div class="row">
       <div class="col-md-6">
-        <%= f.search_field :name_cont, placeholder: "Search your University.."  %>
+        <%= f.search_field :name_or_country_code_cont, placeholder: "Search University or Country.."  %>
       </div>
     </div>
 
