--- a/app/views/universities/show.html.erb
+++ b/app/views/universities/show.html.erb
@@ -25,15 +25,9 @@
 
     <% end %>
   <% end %>
-    <% if user_signed_in? %>
     <li>
       <%= submit_tag "Share", class: "button button_red2" %>
     </li>
-    <% else %>
-      <li>
-        <%= link_to "First Sign In", new_user_session_path, class: "button button_red2" %>
-      </li>
-    <% end %>
     
 <% end %>
 </ul>
@@ -54,7 +48,7 @@
       <h4 class="titulo">Description:</h4>
       <p><%=@university.description %></p>
 
-      <h4 class="titulo">Experiences</h4>
+      <h4 class="titulo">Reasons</h4>
       <%= bar_chart @experiences, colors: ["#FD6C6A"], height: "900px" %>
     </div>
   </div>
@@ -78,7 +72,7 @@
     </div>
 
     <div id="magic">
-      <h4 class="titulo">Contributions:</h4>
+      <h4 class="titulo"># of Contributions:</h4>
       <%= line_chart @experiences2, colors: ["#5B69E5"], height: "100px" %>
     </div>
 
@@ -90,7 +84,7 @@
             <a class="icon-facebook botones button_red" rel="nofollow"
             href="http://www.facebook.com/"
             onclick="popUp=window.open(
-              'http://www.facebook.com/sharer.php?u=<%="#{request.original_url}"%>',
+              'http://www.facebook.com/sharer.php?u=<%="#{@university}"%>',
               'popupwindow',
               'scrollbars=yes,width=800,height=400');
             popUp.focus();
@@ -103,7 +97,7 @@
           <a class="icon-twitter botones button_red" rel="nofollow"
           href="http://twitter.com/"
           onclick="popUp=window.open(
-            'http://twitter.com/intent/tweet?text=\'<%= @university.name %>\' by U-finder - <%="#{request.original_url}"%>',
+            'http://twitter.com/intent/tweet?text=\'<%= @university.name %>\' by Wordniversity - <%="#{@university}"%>',
             'popupwindow',
             'scrollbars=yes,width=800,height=400');
           popUp.focus();
@@ -118,7 +112,7 @@
         <a class="icon-pinterest botones button_red" rel="nofollow"
         href="http://www.pinterest.com/"
         onclick="popUp=window.open(
-          'http://pinterest.com/pin/create/button/?url=<%="#{request.original_url}"%>&amp;media=&amp;description=<%= @university.name %>',
+          'http://pinterest.com/pin/create/button/?url=<%="#{@university}"%>&amp;media=&amp;description=<%= @university.name %>',
           'popupwindow',
           'scrollbars=yes,width=800,height=400');
         popUp.focus();
@@ -131,7 +125,7 @@
       <a class="icon-gplus botones button_red" rel="nofollow"
       href="http://www.plus.google.com/"
       onclick="popUp=window.open(
-        'https://plus.google.com/share?url=<%="#{request.original_url}"%>',
+        'https://plus.google.com/share?url=<%="#{@university}"%>',
         'popupwindow',
         'scrollbars=yes,width=800,height=400');
       popUp.focus();
